src/objects/CS_Software_Download_Metrics__c.object
<CustomObject>
    <description>***Service Cloud*** Capture accelerator download metrics</description>
    <fields>
        <fullName>CS_Download_Date_Time__c</fullName>
        <label>Download Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Download_File__c</fullName>
        <label>Download File</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Download_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Download Release</label>
        <referenceTo>CS_Release__c</referenceTo>
        <relationshipLabel>Software Download Metrics</relationshipLabel>
        <relationshipName>Software_Download_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Downloaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Downloaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Software_Download_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Software Download Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CS_Download_Date_Time__c</columns>
        <columns>CS_Downloaded_By__c</columns>
        <columns>CS_Download_File__c</columns>
        <columns>CS_Download_Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Software Download Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Download Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>